--- a/static/style.css
+++ b/static/style.css
@@ -18,7 +18,7 @@
     --link: #30d158;
     --accent: #1a2a1a;
     --gold: #c9a000;
-    --shame: #ff4444;
+    --shame: #bb1f1fbb;
 }
 
 * { margin: 0; padding: 0; box-sizing: border-box; }
